- Removed Rider plugin from vcs and added it to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /[Bb]uild/
 /[Bb]uilds/
 /Assets/AssetStoreTools*
+/Assets/Plugins/Editor/JetBrains
+/Assets/Plugins/Editor/JetBrains.meta
 /.vs/
 /output*
 ExportedObj/
