--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /Assets/AssetStoreTools*
 /Assets/Plugins/Editor/JetBrains
 /Assets/Plugins/Editor/JetBrains.meta
+/Assets/Plugins/Editor.meta
 /.vs/
 /output*
 ExportedObj/
