- Added CutsceneExecutor with info about the current "run" on the cutscene

--- a/ShiroiCutscenes-Runtime/ShiroiCutscenes-Runtime.csproj
+++ b/ShiroiCutscenes-Runtime/ShiroiCutscenes-Runtime.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cutscene.cs" />
+    <Compile Include="CutsceneExecutor.cs" />
     <Compile Include="CutscenePlayer.cs" />
     <Compile Include="Exception\NotLoadedException.cs" />
     <Compile Include="Futures\FutureManager.cs" />
