--- a/ShiroiCutscenes-Editor/ShiroiCutscenes-Editor.csproj
+++ b/ShiroiCutscenes-Editor/ShiroiCutscenes-Editor.csproj
@@ -32,14 +32,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ShiroiSerialization, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\Libraries\ShiroiSerialization.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEditor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\Libraries\UnityEditor.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditorUtilities, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\UnityEditorUtilities.1.0.0\lib\net35\UnityEditorUtilities.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\Libraries\UnityEngine.dll</HintPath>
@@ -81,6 +82,9 @@
       <Project>{4e266f18-4a6f-47aa-be72-2e2f50f290ae}</Project>
       <Name>ShiroiCutscenes-Runtime</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
