--- a/ShiroiCutscenes-Runtime/ShiroiCutscenes-Runtime.csproj
+++ b/ShiroiCutscenes-Runtime/ShiroiCutscenes-Runtime.csproj
@@ -38,6 +38,10 @@
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\Libraries\UnityEngine.dll</HintPath>
     </Reference>
+    <Reference Include="UnityUtilities, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\UnityUtilities.1.0.0\lib\net35\UnityUtilities.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cutscene.Futures.cs" />
@@ -71,11 +75,13 @@
     <Compile Include="Triggers\StartCutsceneTrigger.cs" />
     <Compile Include="Util\Attributes.cs" />
     <Compile Include="Util\ColorUtil.cs" />
-    <Compile Include="Util\ListUtil.cs" />
     <Compile Include="Util\Reference.cs" />
     <Compile Include="Util\ReferenceUtility.cs" />
     <Compile Include="Util\TypeUtil.cs" />
     <Compile Include="Util\UnityReferences.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
