> Many changes > Too many to list > It's USABLE!

--- a/ShiroiCutscenes-Editor/packages.config
+++ b/ShiroiCutscenes-Editor/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="UnityEditorUtilities" version="1.0.0" targetFramework="net35" />
-  <package id="UnityUtilities" version="1.0.0" targetFramework="net35" />
+  <package id="Lunari.Tsuki" version="1.0.0" targetFramework="net35" />
+  <package id="Lunari.Tsuki.Editor" version="1.0.0" targetFramework="net35" />
 </packages>
