--- a/ShiroiCutscenes-Editor/ShiroiCutscenes-Editor.csproj
+++ b/ShiroiCutscenes-Editor/ShiroiCutscenes-Editor.csproj
@@ -35,43 +35,27 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
+    <Reference Include="Tsuki-Editor, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\Lunari.Tsuki.Editor.1.0.0\lib\net35\Tsuki-Editor.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Tsuki-Runtime, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\Lunari.Tsuki.1.0.0\lib\net35\Tsuki-Runtime.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="UnityEditor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\Libraries\UnityEditor.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEditorUtilities, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\UnityEditorUtilities.1.0.0\lib\net35\UnityEditorUtilities.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\Libraries\UnityEngine.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityUtilities, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\UnityUtilities.1.0.0\lib\net35\UnityUtilities.dll</HintPath>
-      <Private>True</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config\Config.cs" />
     <Compile Include="Config\Configs.cs" />
-    <Compile Include="CutscenePlayerEditor.cs" />
     <Compile Include="Cutscenes\CutsceneEditor.cs" />
     <Compile Include="Cutscenes\CutsceneEditor.Header.cs" />
     <Compile Include="Cutscenes\CutsceneEditor.Tokens.cs" />
-    <Compile Include="Cutscenes\CutscenePlayerEditor.cs" />
-    <Compile Include="Cutscenes\CutscenePlayerEditor.Drawing.cs" />
-    <Compile Include="Drawers\PrimitiveDrawers.cs" />
-    <Compile Include="Drawers\ShiroiDrawers.cs" />
-    <Compile Include="Drawers\TypeDrawer.cs" />
-    <Compile Include="Drawers\TypeDrawerProvider.cs" />
-    <Compile Include="Drawers\TypeDrawers.cs" />
-    <Compile Include="Drawers\UnityDrawerProviders.cs" />
-    <Compile Include="Drawers\UnityDrawers.cs" />
-    <Compile Include="Errors\DefaultErrorCheckers.cs" />
-    <Compile Include="Errors\ErrorChecker.cs" />
-    <Compile Include="Errors\ErrorCheckers.cs" />
-    <Compile Include="Errors\ErrorManager.cs" />
-    <Compile Include="Errors\ErrorMessage.cs" />
-    <Compile Include="MappedToken.cs" />
     <Compile Include="Preview\EditorSceneHandle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShiroiCutscenesEditorConstants.cs" />
@@ -80,6 +64,7 @@
     <Compile Include="ShiroiStyles.cs" />
     <Compile Include="TokenLoader.cs" />
     <Compile Include="Util\GUIProperties.cs" />
+    <Compile Include="Util\Lazy.cs" />
     <Compile Include="Util\RectUtil.cs" />
     <Compile Include="Windows\ConfigWindow.cs" />
   </ItemGroup>
@@ -93,11 +78,4 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-         Other similar extension points exist, see Microsoft.Common.targets.
-    <Target Name="BeforeBuild">
-    </Target>
-    <Target Name="AfterBuild">
-    </Target>
-    -->
 </Project>
