--- a/ShiroiCutscenes-Editor/ShiroiCutscenes-Editor.csproj
+++ b/ShiroiCutscenes-Editor/ShiroiCutscenes-Editor.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Cutscenes\CutsceneEditor.cs" />
     <Compile Include="Cutscenes\CutsceneEditor.Header.cs" />
     <Compile Include="Cutscenes\CutsceneEditor.Tokens.cs" />
+    <Compile Include="IconPostProcessor.cs" />
     <Compile Include="Preview\EditorSceneHandle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShiroiCutscenesEditorConstants.cs" />
@@ -66,11 +67,15 @@
     <Compile Include="ShiroiStyles.cs" />
     <Compile Include="TokenLoader.cs" />
     <Compile Include="Tokens\GetObjectFromSceneTokenEditor.cs" />
+    <Compile Include="Util\GUIIcons.cs" />
     <Compile Include="Util\GUIProperties.cs" />
     <Compile Include="Util\Lazy.cs" />
     <Compile Include="Util\SerializedPropertyUtility.cs" />
     <Compile Include="Util\TypeSelectorPopupContent.cs" />
     <Compile Include="Windows\ConfigWindow.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Icons\Cutscene Icon.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ShiroiCutscenes-Runtime\ShiroiCutscenes-Runtime.csproj">
@@ -80,6 +85,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Icons" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
