--- a/ShiroiCutscenes-Runtime/ShiroiCutscenes-Runtime.csproj
+++ b/ShiroiCutscenes-Runtime/ShiroiCutscenes-Runtime.csproj
@@ -44,7 +44,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attributes\TokenCategoryAttribute.cs" />
     <Compile Include="Communication\Context.cs" />
     <Compile Include="Communication\CommunicationContexts.cs" />
     <Compile Include="Communication\Input.cs" />
@@ -57,6 +56,7 @@
     <Compile Include="Preview\IScenePreviewable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShiroiCutscenesConstants.cs" />
+    <Compile Include="Tokens\DebugObjectToken.cs" />
     <Compile Include="Tokens\DebugTextToken.cs" />
     <Compile Include="Tokens\DeleteToken.cs" />
     <Compile Include="Tokens\ExecuteCutsceneToken.cs" />
@@ -72,7 +72,6 @@
     <Compile Include="Triggers\CollisionCutsceneTrigger.cs" />
     <Compile Include="Triggers\CutsceneTrigger.cs" />
     <Compile Include="Triggers\StartCutsceneTrigger.cs" />
-    <Compile Include="Util\Attributes.cs" />
     <Compile Include="Util\TypeUtil.cs" />
   </ItemGroup>
   <ItemGroup>
